# postal-inspector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  GETTING-STARTED.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: task-summary.md
docs/: GETTING-STARTED.md  sample-briefing.html
scripts/: backup.sh  install.sh
services/ai-scanner/: Dockerfile  entrypoint.sh  mail-scanner.sh
services/daily-briefing/: Dockerfile  daily-briefing.sh  entrypoint.sh
services/imap/: .dockerignore  Dockerfile  dovecot.conf  entrypoint.sh
services/imap/conf.d/: .gitkeep
services/imap/sieve/: default.sieve
services/mail-fetch/: Dockerfile  deliver.sh  entrypoint.sh  lmtp-deliver.sh
services/python-briefing/: Dockerfile
services/python-scanner/: Dockerfile
src/postal_inspector/: __init__.py  __main__.py  cli.py  exceptions.py
src/postal_inspector/briefing/: __init__.py  generator.py  health.py
src/postal_inspector/config/: __init__.py  settings.py
src/postal_inspector/core/: __init__.py  logging.py  security.py
src/postal_inspector/models/: __init__.py  email.py
src/postal_inspector/scanner/: __init__.py  ai_analyzer.py  prompts.py  verdict.py
src/postal_inspector/services/: __init__.py  mail_processor.py  scheduler.py
src/postal_inspector/transport/: __init__.py  imap_client.py  lmtp_client.py  maildir.py
systemd/: mail-backup.service  mail-backup.timer  mail-stack.service  postal-inspector.service
tests/: conftest.py
tests/unit/: test_ai_analyzer.py  test_config.py  test_email_model.py  test_health.py  test_prompts.py  test_scheduler.py  test_security.py  test_transport.py  test_verdict.py
